Fix bug where character counter would shift when resizing

--- a/assets/css/editor.scss
+++ b/assets/css/editor.scss
@@ -381,7 +381,7 @@
   height: 100%;
   overflow: scroll;
   text-align: left;
-  border-radius: 0 0 2px 2px;
+  border-radius: 0 ;
   box-sizing: border-box;
   color: #333 !important;
   h1 {
